--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
